# near-lake-framework-rs

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: ci.yml  fmt_clippy_tests.yml
blocks/000000879765/: shard_0.json
examples/: README.md  actions.rs  nft_indexer.rs  printer.rs  with_context.rs  with_context_parent_tx_cache.rs
lake-context-derive/: Cargo.toml  README.md
lake-context-derive/src/: lib.rs
lake-framework/: Cargo.toml  README.md  output.txt
lake-framework/blocks/000000879765/: block.json
lake-framework/examples/: actions.rs  middleware_simple.rs  nft_indexer.rs  simple.rs  with_context.rs  with_context_parent_tx_cache.rs
lake-framework/src/: lib.rs  s3_fetchers.rs  streamer.rs  types.rs
lake-framework/tests/: daniyar.rs
lake-parent-transaction-cache/: Cargo.toml  README.md
lake-parent-transaction-cache/src/: lib.rs
lake-primitives/: Cargo.toml  README.md
lake-primitives/src/: lib.rs
lake-primitives/src/types/: actions.rs  block.rs  delegate_actions.rs  events.rs  impl_actions.rs  mod.rs  receipts.rs  state_changes.rs  transactions.rs
near-lake-framework/: Cargo.toml
near-lake-framework/src/: lib.rs  s3_fetchers.rs  streamer.rs  types.rs
near-lake-primitives/: Cargo.toml
near-lake-primitives/src/: lib.rs
near-lake-primitives/src/types/: block.rs  events.rs  mod.rs  receipts.rs  state_changes.rs  transactions.rs
src/: lib.rs  s3_client.rs  s3_fetchers.rs  types.rs
src/providers/: mod.rs
src/providers/fastnear/: client.rs  fetchers.rs  mod.rs  types.rs
src/providers/s3/: client.rs  fetchers.rs  mod.rs  types.rs
