[workspace]
members = [
    "lake-framework",
    "lake-primitives",
    "lake-parent-transaction-cache",
    "lake-context-derive",
]

# cargo-workspaces
[workspace.package]
version = "0.8.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-lake-framework"
description = "Library to connect to the NEAR Lake S3 and stream the data"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "near-lake", "near-indexer"]
authors = ["Near Inc <hello@nearprotocol.com>"]
rust-version = "1.69.0"
