[package]
name = "near-lake-framework"
version = "0.0.0" # managed by cargo-workspaces, see below
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-lake-framework"
description = "Library to connect to the NEAR Lake S3 and stream the data"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "near-lake", "near-indexer"]
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.58.1"

# cargo-workspaces
[workspace.metadata.workspaces]
version = "0.7.1"

[dependencies]
anyhow = "1.0.51"
aws-config = { version = "1.0.0", features = ["behavior-version-latest"] }
aws-types = "1.0.0"
aws-credential-types = "1.0.0"
aws-sdk-s3 = "0.39.0"
async-stream = "0.3.3"
async-trait = "0.1.64"
derive_builder = "0.11.2"
futures = "0.3.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"

near-indexer-primitives = "0.17.0"

[dev-dependencies]
aws-smithy-http = "0.60.0"

[lib]
doctest = false
