[package]
name = "near-lake-framework"
version = "0.0.0"                                                          # managed by cargo-workspaces, see below
license = "MIT OR Apache-2.0"
repository = "https://github.com/near/near-lake-framework"
description = "Library to connect to the NEAR Lake S3 and stream the data"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["near", "near-lake", "near-indexer"]
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.75.0"

# cargo-workspaces
[workspace.metadata.workspaces]
version = "0.7.7"

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.3", features = ["behavior-version-latest"] }
aws-types = "1.1.3"
aws-credential-types = "1.1.3"
aws-sdk-s3 = "1.13.0"
aws-smithy-types = "1.1.3"
async-stream = "0.3.5"
async-trait = "0.1.77"
derive_builder = "0.13.0"
futures = "0.3.30"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["sync", "time", "rt", "macros"] }
tokio-stream = { version = "0.1.14" }
tracing = "0.1.40"

near-indexer-primitives = "0.20.0"

[dev-dependencies]
aws-smithy-http = "0.60.3"

[lib]
doctest = false
