[package]
name = "lake-parent-transaction-cache"
description = "Ready-to-use context for the Lake Framework in Rust. It provides a cache for keeping the relation between transactions and receipts in cache."
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cached = "0.43.0"
derive_builder = "0.12.0"

near-lake-framework = { path = "../lake-framework" }

[dev-dependencies]
anyhow = "1.0.44"
