[package]
name = "near-lake-primitives"
description = "Primitives for NEAR Lake"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow = "1.0.51"
near-crypto = "0.17.0"
near-primitives-core = "0.17.0"
near-primitives = "0.17.0"
near-indexer-primitives = "0.17.0"
paste = "1.0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.38"
