[package]
name = "near-lake-primitives"
description = "Primitives for NEAR Lake"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
anyhow = "1.0.51"
near-crypto = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }
near-primitives-core = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }
near-primitives = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }
near-indexer-primitives = { git = "https://github.com/near/nearcore", rev = "08941a3c070eca2e6163a4ad1eaed1f0d3ee233c" }
paste = "1.0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
thiserror = "1.0.38"
