[package]
name = "near-lake-framework"
version = "0.0.0" # managed by cargo-workspaces
edition = "2021"

[dependencies]
anyhow = "1.0.51"
aws-config = "0.13.0"
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"
derive_builder = "0.11.2"
futures = "0.3.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.75"
tokio = { version = "1.1", features = ["sync", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.13"

async-stream = "0.3.3"

near-lake-primitives = { path = "../near-lake-primitives" }
